[package]
name = "rust-rocket-postgresql-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
fern = "0.6.2"
log = "0.4.21"
postgres = "0.19.7"
rocket = "0.5.0"
rocket_contrib = "0.4.11"
serde = "1.0.200"
serde_json = "1.0.116"
[target.i686-pc-windows-msvc.dependencies]
winapi = { version = "0.3.8", features = ["winerror"] }

[dev-dependencies]
mockall = "0.12.1"
