[package]
name = "rust-axum-jwt-postgresql-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
fern = "0.6.2"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
postgres = "0.19.7"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
[target.i686-pc-windows-msvc.dependencies]
winapi = { version = "0.3.8", features = ["winerror"] }

[dev-dependencies]
mockall = "0.12.1"
